# toyapi

./: README.md  Taskfile.yml  client_test.py  pyproject.toml  setup.cfg
toyapi/: main.py  models.py  routes.py
