[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry]
authors = ["kuderr <dakudryavcev@gmail.com>"]
description = "Web-server toy project simple as possible"
name = "toyapi"
version = "0.1.0"

[tool.poetry.dependencies]
loguru = "^0.6.0"
python = "^3.10"

[tool.poetry.dev-dependencies]
autoflake = "^1.5.1"
black = "^22.6.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
mypy = "^0.971"
pylint = "^2.15.0"
toml-sort = "^0.20.0"
